# module_2

./: .gitignore  0630_todo.txt  1  CMakeLists.txt  FtpClient.c  FtpCommand.h  README.MD  a  a.out  account.txt  fileDanzi  fileDanzi.c  fileDanzi.h  fileDanzi_README.MD  fileUpload.c  fileUpload.h  getRequest  getRequest.c  getRequest.h  hoho.txt  listOpen  listOpen.h  localCommand.c  localCommand.h  myListOpen  ncurses.c  request.txt  response.c  response.h  result.txt  sendRequest.c  sendRequest.h  serverStart.c  serverStart.h  test.c  upLoad  upLoad.c  upLoad.h
Client/: .client.c.swp  .clientMain.c.swo  .clientMain.c.swp  .clientTest.c.swp  .client_save.c.swp  .commonNcurses.c.swo  .commonNcurses.c.swp  .commonNcurses.h.swp  .commonNucurses.c.swp  .doCommand.c.swp  .localClientThread.c.swp  .myListOpen.c.swp  .new_clientMain.c.swp  .sendRequest.c.swp  a  a.out  b  client  client.c  clientMain.c  clientMain.h  clientNcurses.c  clientStart.c  clientStart.h  clientTest.c  client_save.c  commandFunc.c  commandFunc.h  commonNcurses.c  commonNcurses.h  commonNucurses.c  console.c  console.h  dirmanager.h  doCommand.c  doCommand.h  doDownloadThread.c  doListThread.c  finalClient.c  list.txt  (+15 more)
Server/: .ho.swp  .serverStart.c.swp  \  a  account.txt  alarm.c  clientMain.c  fileDanzi  fileDanzi.c  fileDanzi.h  fileUpload.c  fileUpload.h  getRequest.c  getRequest.h  h  help.c  help.h  ho.txt  keyPad.c  keyPad.h  list.txt  listOpen.c  listOpen.h  localCommand.c  localServerThread.c  localServerThread.h  log.sh  myList.txt  myListOpen.c  myListOpen.h  parsing  parsing.c  parsing.h  (+20 more)
(+91 files in other folders)
